# scikit-embeddings

./: README.md  pyproject.toml
skembeddings/: __init__.py  _hub.py  base.py  error.py  pipeline.py
skembeddings/feature_extraction/: __init__.py
skembeddings/feature_extraction/text/: __init__.py  huggingface.py  spacy.py
skembeddings/models/: __init__.py  _glove_impl.py  doc2vec.py  glove.py  sif_embeddings.py  word2vec.py
skembeddings/preprocessing/: __init__.py  joiner.py
skembeddings/streams/: __init__.py  _stream.py  utils.py
skembeddings/tokenization/: __init__.py  dummy.py  filter.py  huggingface.py
skembeddings/tokenizers/: __init__.py  _huggingface.py  base.py  spacy.py
tokendo/: filter.py  huggingface.py  spacy.py
tokendo/feature_extraction/: listcountvectorizer.py
tokendo/preprocessing/: joiner.py
