[tool.black]
line-length=79

[tool.poetry]
name = "scikit-embeddings"
packages = [
  {include = "skembeddings"}
]
version = "0.3.0"
description = "Tools for training word and document embeddings in scikit-learn."
authors = ["Márton Kardos <power.up1163@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.2.0"
tokenizers = "^0.13.0"
confection = "^0.1.0"
catalogue = "^2.0.8"
huggingface-hub = "^0.16.0"
gensim = "^4.3.0"
glovpy = { version = "^0.1.0", optional = true }

[tool.poetry.extras]
spacy = ["spacy"]
glove = ["glovpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
